--- a/www/index.html
+++ b/www/index.html
@@ -30,6 +30,9 @@
 		<ion-content>
 			<ion-view view-title="Login" name="login-view" class="background">
 				<ion-content class="padding">
+					<ion-nav-title>
+					<img src="..\img\ionic.png">
+					</ion-nav-title>
 					<div class="list list-inset">
 						<label class="item item-input">
 							<input type="text" placeholder="Username" ng-model="data.username">
@@ -39,7 +42,7 @@
 						</label>
 					</div>
 					<button class="button button-block button-calm" ng-click="login()">Login</button>
-					<p><center>OR</center></p>
+					<!-- <p><center>OR</center></p> -->
 					<button class="button button-block button-calm" ng-click="login()">Create a profile</button>
 				</ion-content>
 			</ion-view>
