logo position center created

--- a/www/index.html
+++ b/www/index.html
@@ -32,7 +32,7 @@
 				<ion-content class="padding">
 					<!-- <ion-nav-title> -->
 					<div id="logo-container">
-						<img src="img/logo.png">
+						<center><img src="img/logo.png"></center>
 					</div>
 					<!-- </ion-nav-title> -->
 					<div class="list list-inset">
